--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AngularJS API Consuming Example</title>
+    <title>Vestas FrontEnd #2</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="app.js"></script>
 </head>
@@ -9,7 +9,7 @@
     <h1>Lista de Postagens</h1>
     <ul>
         <li ng-repeat="post in posts">
-            {{ post.title }}
+            {{ post.partNumber }}
         </li>
     </ul>
 </body>
